Fixing bugs. Some requests for admin. Senior admin
