# backend/entities/LevelBan.go
@@ -1,0 +1,5 @@
+package entities
+
+type LevelBan struct {
+	Id int `json:"id" binding:"required"`
+}
