# backend/entities/UserAccess.go
@@ -1,0 +1,6 @@
+package entities
+
+type ChangeUserAccess struct {
+	Id        int `json:"id" binding:"required"`
+	NewAccess int `json:"new_access" binding:"required"`
+}
